# transform-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
python/: gpt.py
src/: dataset.rs  gpt.rs  main.rs
