[package]
name = "transform-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
rand = "0.8.5"
tokenizers = { version = "0.13.4", features = ["progressbar"] }
hf-hub = "0.3.2"
anyhow = "1.0.75"
